tests/fixtures/invalid/pow_bool_none_none.py
# Cannot call pow() with Bool, None, None
x = pow(True, None, None)
